# tauri-update-server

./: .env.SAMPLE  Cargo.toml  Dockerfile  README.md
src/: config.rs  main.rs
src/github/: client.rs  mod.rs
src/handlers/: download.rs  mod.rs  update.rs
src/platform/: matcher.rs
