[package]
name = "tauri-update-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
serde_json = "1.0"
octocrab = "0.41"
anyhow = "1.0"  # Add this line
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
semver = "1.0"
bytes = "1.7"
