[package]
name = "tauri-update-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.5" }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
serde_json = "1.0"
octocrab = { version = "0.42" }
anyhow = "1.0"  # Add this line
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"]}
semver = "1.0"
bytes = "1.7.2"
tokio = { version = "1.0", features = ["sync"] }
lazy_static = "1.4.0"
thiserror = "2.0"
